# backup-integrity

./: README.md  pyproject.toml  report.txt  setup.cfg
backup_integrity/: controller.py  crawler.py  integrity.py  results.py
scripts/: main.py
tests/: README.md  test_controller.py  test_crawler.py  test_integrity.py
tests/test_data/main_backup/text/: text_3
tests/test_data/secondary_backup/text/: text_1  text_2
tests/test_data/tertiary_backup/: binary_1
tests/test_data/tertiary_backup/text/: text_2
