[metadata]
name = backup-integrity
version = 1.0
description = A 3-2-1 backup file validator tool
author = Ric M
long_description = file: README.md
long_description_content_type = text/markdown
url = github.com/rjmarques/backup-integrity
license_files = LICENSE

[options]
packages = find:
install_requires =
    pytest

[options.packages.find]
include = backup_integrity